syntax = "proto3";

package kuma.test.v1alpha1;

option go_package = "github.com/kumahq/kuma/test/v1alpha1";

// TrafficRoute is a sample configuration object for testing purposes.
message TrafficRoute {

  // HTTP path.
  string path = 1;
}
